deployments/nginx-blue-green/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
 name: rollout-bluegreen
spec:
 replicas: 1
 strategy:
   blueGreen:
     activeService: rollout-bluegreen-active
     previewService: rollout-bluegreen-preview
     autoPromotionEnabled: false
 revisionHistoryLimit: 3
 selector:
   matchLabels:
     app: rollout-bluegreen
 template:
   metadata:
     labels:
       app: rollout-bluegreen
   spec:
     containers:
     - name: rollouts-demo
       image: nginxdemos/hello:plain-text
       imagePullPolicy: Always
       ports:
        - name: http
          containerPort: 80
          protocol: TCP
